# duckdb

tools/sqlite3_api_wrapper/: CMakeLists.txt
